
- MBString:
  . Removed the unused $is_hex parameter from mb_decode_numericentity(). (cmb)

- MySQLi:
  . Fixed bug #76809 (SSL settings aren't respected when persistent connections
    are used). (fabiomsouto)

- mysqlnd:
  . Fixed #60594 (mysqlnd exposes 160 lines of stats in phpinfo). (PeeHaa)

- OpCache:
  . Fixed bug #78654 (Incorrectly computed opcache checksum on files with 
    non-ascii characters). (mhagstrand)

- PCRE:
  . Don't ignore invalid escape sequences. (sjon)

- PDO:
  . Fixed bug #77849 (Disable cloning of PDO handle/connection objects).
    (camporter)

- phpdbg:
  . Fixed bug #76596 (phpdbg support for display_errors=stderr). (kabel)
  . Fixed bug #76801 (too many open files). (alekitto)
  . Fixed bug #77800 (phpdbg segfaults on listing some conditional breakpoints).
    (krakjoe)
  . Fixed bug #77805 (phpdbg build fails when readline is shared). (krakjoe)

- Reflection:
  . Fixed bug #78697 (ReflectionClass::implementsInterface - inaccurate error 
    message with traits). (villfa)

- Session:
  . Fixed bug #78624 (session_gc return value for user defined session
    handlers). (bshaffer)

- SimpleXML:
  . Fixed bug #75245 (Don't set content of elements with only whitespaces).
    (eriklundin)

- sodium:
  . Fixed bug #77646 (sign_detached() strings not terminated). (Frank)

- Standard:
  . Fixed bug #77204 (getimagesize(): Read error! should mention file path).
    (peter279k)
  . Fixed bug #76859 (stream_get_line skips data if used with data-generating
    filter). (kkopachev)

- tidy:
  . Removed the unused $use_include_path parameter from tidy_repair_string().
    (cmb)

- XML:
  . Fixed bug #76874 (xml_parser_free() should never leak memory). (Nikita)

- XMLWriter:
  . Changed functions to accept/return XMKWriter objects instead of resources.
    (cmb)

- Zip:
  . Fixed bug #72374 (remove_path strips first char of filename). (tyage)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>