@@ -102,5 +102,6 @@ enum {
 	PDO_OCI_ATTR_ACTION = PDO_ATTR_DRIVER_SPECIFIC,
 	PDO_OCI_ATTR_CLIENT_INFO,
 	PDO_OCI_ATTR_CLIENT_IDENTIFIER,
-	PDO_OCI_ATTR_MODULE
+	PDO_OCI_ATTR_MODULE,
+	PDO_OCI_ATTR_CALL_TIMEOUT
 };
